[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphquest"
version = "1.0.6"
authors = [
  { name="Paolo Mura", email="paolo@muraonline.com" },
]
description = "A small package for creating question generators for use in the Graph Quest website."
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { file="LICENSE" }
dependencies = [
    "networkx==3.1",
    "numpy==1.24.2",
    "shapely==2.0.1"
]

[project.urls]
repository = "https://github.com/PaoloMura/graph-quest"
bug_tracker = "https://github.com/PaoloMura/graph-quest/issues"
documentation = "https://graphquest.readthedocs.io/en/latest/index.html"
